--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>CV M.ADRIAN.J</title>
+  <title>m_adrian_j</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -168,21 +168,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>HTML</span> <i class="val">60%</i></span>
+              <span class="skill"><span>HTML</span> <i class="val">Menengah</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>CSS</span> <i class="val">75%</i></span>
+              <span class="skill"><span>CSS</span> <i class="val">Menengah</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Canva</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Canva</span> <i class="val">Menengah</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -193,14 +193,14 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>PHP</span> <i class="val">50%</i></span>
+              <span class="skill"><span>PHP</span> <i class="val">Pemula</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
       
             <div class="progress">
-              <span class="skill"><span>LARAVEL</span> <i class="val">55%</i></span>
+              <span class="skill"><span>LARAVEL</span> <i class="val">Pemula</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
